# 381706-2_gavriushova_labs

./: .travis.yml  CMakeLists.txt  O.arithmetics.doc  README.md  SQ.sln  lab-polynom.sln  lab-set.sln  lab2-matix.sln  lab6-multystack.sln  lab8-stacklist.sln  Гаврюшова_Отчет_Стеки и_Очереди.doc  О.arrlist.doc
ARIFM_lab/: CMakeLists.txt  README.md
ARIFM_lab/Arithmetic/: CMakeLists.txt  sample_postfix.cpp
ARIFM_lab/arithmeticlib/: CMakeLists.txt  postfix.cpp  stack.h
ARIFM_lab/arithmetictest/: CMakeLists.txt
Arrlist/: Arrlist_main.cpp  CMakeLists.txt
Debug/: base.ilk  base_test.ilk
arithmeticlib/: postfix.h
arithmetictest/: test_tpostfix.cpp  test_tstack.cpp
arrlistlib/: CMakeLists.txt  arrlist.cpp  arrlist.h  queue.h
arrlisttest/: ArrlistTest.cpp  CMakeLists.txt
gtest/: gtest.vcxproj
gtest/Debug/: gtest.idb
gtest/Debug/gtest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  gtest.lastbuildstate
list/: CMakeLists.txt  base.vcxproj  main.cpp
list_lib/: CMakeLists.txt  list.cpp  list.h
list_test/: CMakeLists.txt  base_test.vcxproj  test_list.cpp
matrix/: CMakeLists.txt  base.vcxproj  semple _matrixcpp.cpp
matrix_lib/: CMakeLists.txt  utmatrix.cpp  utmatrix.h
matrix_test/: CMakeLists.txt  base_test.vcxproj  test_tmatrix.cpp
multystack/: CMakeLists.txt  base.vcxproj  stack_main.cpp
multystack_lib/: CMakeLists.txt  MStack.h
multystack_test/: CMakeLists.txt  base_test.vcxproj  test_multystack.cpp
polynom/: CMakeLists.txt  base.vcxproj  polynom_main.cpp
polynom_lib/: CMakeLists.txt  Monom.cpp  Monom.h  Polynom.cpp  Polynom.h
polynom_test/: CMakeLists.txt  base_test.vcxproj  test_polynom.cpp
set/: CMakeLists.txt  base.vcxproj  sample_prime_numbers.cpp
set_lib/: CMakeLists.txt  tbitfield.cpp  tbitfield.h  tset.cpp
set_test/: CMakeLists.txt  base_test.vcxproj
stack_and_queue/: CMakeLists.txt  SQ.cpp  SQ.vcxproj
stack_and_queue_lib/: CMakeLists.txt  Stack.h
stack_and_queue_test/: CMakeLists.txt  base_test.vcxproj
stacklist/: CMakeLists.txt  base.vcxproj  main.cpp
stacklist_lib/: CMakeLists.txt  stacklist.cpp  stacklist.h
stacklist_test/: CMakeLists.txt  base_test.vcxproj  test_stacklist.cpp
